# revm-is-all-you-need

./: Cargo.toml
contracts/src/: Simulator.sol
contracts/src/interfaces/: IERC20.sol  IUniswapV2Pair.sol  IUniswapV2Router01.sol  IUniswapV2Router02.sol  IUniswapV3Pool.sol
src/: benchmarks.rs  constants.rs  foundry_example.rs  lib.rs  main.rs  revm_examples.rs  trace.rs  utils.rs
